syntax = "proto3";

package bbejeck.Windowing-Stateful.proto;
option java_multiple_files = true;
option java_outer_classname = "SensorInfoProto";

message SensorInfo {
  string id = 1;
  string latlong = 2;
  int32  generation = 3;
  int64 deployed = 4;
}